fix: frontend only

--- a/apps/frontend/public/locales/en/endpoints.json
+++ b/apps/frontend/public/locales/en/endpoints.json
@@ -15,7 +15,8 @@
   "enableApiKeyAuth": "Enable API Key Authentication",
   "enableApiKeyAuthDescription": "Require API key for access",
   "useQueryParamAuth": "Use Query Parameter Authentication",
-  "useQueryParamAuthDescription": "Allow API key in query parameter",
+  "queryParamAuthDescription": "Allow API key authentication via query parameters (?api_key=...)",
+  "apiKeyTypeHelp": "Use MCP API keys for accessing these endpoints. Admin API keys are for administrative functions only.",
   "createMcpServer": "Create MCP Server",
   "createMcpServerDescription": "Automatically create an MCP server for this endpoint",
   "endpointCreated": "Endpoint Created",
@@ -54,11 +55,10 @@
   "namespaceDescription": "Select the namespace this endpoint should map to.",
   "apiKeyAuth": "API Key Authentication",
   "apiKeyAuthDescription": "Require API key for endpoint access",
-  "oauthAuth": "OAuth Authentication (Beta)",
+  "oauthAuth": "OAuth Authentication",
   "enableOauth": "Enable OAuth Authentication",
   "oauthAuthDescription": "Allow OAuth bearer token authentication",
   "oauthHttpsWarning": "⚠️ OAuth requires HTTPS in production environments for security",
-  "queryParamAuthDescription": "Accept API key via ?api_key= in addition to Authorization header",
   "createMcpServerExplanation": "This will create a Streamable HTTP MCP server configuration that you can use to inspect this endpoint.",
   "rateLimit": "Rate Limiting (Beta)",
   "enableMaxRate": "Enable Rate Limiting",
