--- a/apps/frontend/public/locales/en/settings.json
+++ b/apps/frontend/public/locales/en/settings.json
@@ -44,6 +44,15 @@
   "mcpResetTimeoutEnabledSuccess": "MCP reset timeout on progress has been enabled",
   "mcpResetTimeoutDisabledSuccess": "MCP reset timeout on progress has been disabled",
   "mcpResetTimeoutToggleError": "Failed to update MCP reset timeout setting",
+  "dockerSettings": "Docker Settings",
+  "dockerSettingsDescription": "Configure Docker image settings for MCP proxy servers",
+  "dockerImage": "Docker Image",
+  "dockerImageDescription": "Docker image name for MCP proxy servers. This image will be automatically pulled if it doesn't exist locally.",
+  "dockerImageUnsavedChanges": "Docker image has unsaved changes",
+  "dockerImageUpdatedSuccess": "Docker image updated successfully",
+  "dockerImageUpdateError": "Failed to update Docker image",
+  "updating": "Updating...",
+  "update": "Update",
   "generalSettings": "General Settings",
   "securitySettings": "Security Settings",
   "notificationSettings": "Notification Settings",
