--- a/apps/frontend/public/locales/zh/settings.json
+++ b/apps/frontend/public/locales/zh/settings.json
@@ -44,6 +44,15 @@
   "mcpResetTimeoutEnabledSuccess": "MCP 进度时重置超时已被启用",
   "mcpResetTimeoutDisabledSuccess": "MCP 进度时重置超时已被禁用",
   "mcpResetTimeoutToggleError": "更新 MCP 重置超时设置失败",
+  "dockerSettings": "Docker 设置",
+  "dockerSettingsDescription": "配置 MCP 代理服务器的 Docker 镜像设置",
+  "dockerImage": "Docker 镜像",
+  "dockerImageDescription": "MCP 代理服务器的 Docker 镜像名称。如果本地不存在，此镜像将自动拉取。",
+  "dockerImageUnsavedChanges": "Docker 镜像有未保存的更改",
+  "dockerImageUpdatedSuccess": "Docker 镜像更新成功",
+  "dockerImageUpdateError": "更新 Docker 镜像失败",
+  "updating": "更新中...",
+  "update": "更新",
   "generalSettings": "常规设置",
   "securitySettings": "安全设置",
   "notificationSettings": "通知设置",
